# atug

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  lib_info.h  lib_info.h.in  todo.txt  win_backup_src.bat
_src/: acrc.cc  adata.cc  afile.cc  afile_attr.cc  afile_win_impl.cc  ainstance_limiter.cc  alog.cc  amemory.cc  aroutine.cc  asafelist.cc  ashared_ptr.cc  asocket.cc  asocket_comm_routine.cc  athread.cc  atime.cc
_tests/: CMakeLists.txt  test_comm.cc  test_data.cc  test_logfile.cc  test_sharedptr.cc  test_threadroutine.cc  testmain.cc
include/: acomm_protocol.h  acomm_react.h  acrc.h  acryptot.h  adata.h  aexception.h  afile.h  afile_attr.h  afile_win_impl.h  ainstance_limiter.h  alog.h  amem_macro.h  amemory.h  aroutine.h  aroutine_factory.h  asafelist.h  ashared_ptr.h  asocket.h  asocket_comm_routine.h  asqlite.h  athread.h  atime.h  atug2.h  readme.txt  win.crtdbg.h
